Working on collections and hidden inner classes